Added command_execute_open_file. Removed jmanager_dispatch_draw_messages. Fixed wheel behavior in the editor (only when the editor is in standby state). Replaced scare/unscare_mouse jmouse_hide/show. Renamed ji_mouse -> jmouse. Added command_execute_close_file

--- a/makefile.mgw
+++ b/makefile.mgw
@@ -15,13 +15,12 @@ endif
 # Flags for MinGW
 
 CFLAGS =
-# LFLAGS = -Wl,--subsystem,windows
-LFLAGS = -mconsole
-# LFLAGS = -mwindows
-#LFLAGS_LAST = -lalleg -lmoldname-msvc
-# LFLAGS_LAST = -lalleg -lkernel32 -luser32 -lgdi32 -lcomdlg32 -lwinspool -lwinmm -lshell32 -lshlwapi -lcomctl32 -lole32 -loleaut32 -luuid -lrpcrt4 -ladvapi32 -lwsock32 -lodbc32 -lcomctl32 -lsecur32 -lmsimg32
-# LFLAGS_LAST = -lalleg
-LFLAGS_LAST = -lalld
+LFLAGS = -mwindows
+ifdef DEBUGMODE
+  LFLAGS_LAST = -lalld
+else
+  LFLAGS_LAST = -lalleg
+endif
 WITHICON = 1
 
 ######################################################################
