--- a/makefile.mgw
+++ b/makefile.mgw
@@ -15,7 +15,8 @@ endif
 # Flags for MinGW
 
 CFLAGS =
-LFLAGS = -mwindows
+# LFLAGS = -mwindows
+LFLAGS = -mconsole
 ifdef DEBUGMODE
   LFLAGS_LAST = -lalld
 else
