--- a/makefile.lst
+++ b/makefile.lst
@@ -5,182 +5,175 @@
 
 ASE = ase$(EXE)
 
-ASE_SOURCES =					\
-	src/commands/cmd_about.c		\
-	src/commands/cmd_advanced_mode.c	\
-	src/commands/cmd_change_image_type.c	\
-	src/commands/cmd_clear.c		\
-	src/commands/cmd_close_file.c		\
-	src/commands/cmd_color_curve.c		\
-	src/commands/cmd_configure_screen.c	\
-	src/commands/cmd_configure_tools.c	\
-	src/commands/cmd_convolution_matrix.c	\
-	src/commands/cmd_copy.c			\
-	src/commands/cmd_copy_frame.c		\
-	src/commands/cmd_crop.c			\
-	src/commands/cmd_cut.c			\
-	src/commands/cmd_deselect_mask.c	\
-	src/commands/cmd_despeckle.c		\
-	src/commands/cmd_draw_text.c		\
-	src/commands/cmd_drawing_tools.c	\
-	src/commands/cmd_duplicate_layer.c	\
-	src/commands/cmd_duplicate_sprite.c	\
-	src/commands/cmd_sprite_editor.c	\
-	src/commands/cmd_exit.c			\
-	src/commands/cmd_film_editor.c		\
-	src/commands/cmd_flatten_layers.c	\
-	src/commands/cmd_flip_horizontal.c	\
-	src/commands/cmd_flip_vertical.c	\
-	src/commands/cmd_frame_properties.c	\
-	src/commands/cmd_invert_color.c		\
-	src/commands/cmd_invert_mask.c		\
-	src/commands/cmd_layer_properties.c	\
-	src/commands/cmd_link_frame.c		\
-	src/commands/cmd_load_mask.c		\
-	src/commands/cmd_mapgen.c		\
-	src/commands/cmd_mask_all.c		\
-	src/commands/cmd_mask_by_color.c	\
-	src/commands/cmd_merge_down_layer.c	\
-	src/commands/cmd_move_frame.c		\
-	src/commands/cmd_new_file.c		\
-	src/commands/cmd_new_frame.c		\
-	src/commands/cmd_new_layer.c		\
-	src/commands/cmd_new_layer_set.c	\
-	src/commands/cmd_open_file.c		\
-	src/commands/cmd_options.c		\
-	src/commands/cmd_palette_editor.c	\
-	src/commands/cmd_paste.c		\
-	src/commands/cmd_play_flic.c		\
-	src/commands/cmd_preview.c		\
-	src/commands/cmd_quick_copy.c		\
-	src/commands/cmd_quick_move.c		\
-	src/commands/cmd_record_screen.c	\
-	src/commands/cmd_redo.c			\
-	src/commands/cmd_refresh.c		\
-	src/commands/cmd_remove_frame.c		\
-	src/commands/cmd_remove_layer.c		\
-	src/commands/cmd_replace_color.c	\
-	src/commands/cmd_reselect_mask.c	\
-	src/commands/cmd_run_script.c		\
-	src/commands/cmd_save_file.c		\
-	src/commands/cmd_save_file_as.c		\
-	src/commands/cmd_save_mask.c		\
-	src/commands/cmd_screen_shot.c		\
-	src/commands/cmd_select_file.c		\
-	src/commands/cmd_sprite_properties.c	\
-	src/commands/cmd_tips.c			\
-	src/commands/cmd_undo.c			\
-	src/commands/commands.c			\
-	src/console/console.c			\
-	src/core/app.c				\
-	src/core/config.c			\
-	src/core/cfg.c				\
-	src/core/core.c				\
-	src/core/dirs.c				\
-	src/core/modules.c			\
-	src/dialogs/canvasze.c			\
-	src/dialogs/colsel.c			\
-	src/dialogs/dmapgen.c			\
-	src/dialogs/dpaledit.c			\
-	src/dialogs/drawtext.c			\
-	src/dialogs/effect/dcolcurv.c		\
-	src/dialogs/effect/dconvmtr.c		\
-	src/dialogs/effect/dinvcol.c		\
-	src/dialogs/effect/dmedian.c		\
-	src/dialogs/effect/dreplcol.c		\
-	src/dialogs/filesel.c			\
-	src/dialogs/filmedit.c			\
-	src/dialogs/gfxsel.c			\
-	src/dialogs/maskcol.c			\
-	src/dialogs/minipal.c			\
-	src/dialogs/options.c			\
-	src/dialogs/playfli.c			\
-	src/dialogs/quick.c			\
-	src/dialogs/repo.c			\
-	src/dialogs/scrsaver.c			\
-	src/dialogs/tips.c			\
-	src/dialogs/vectmap.c			\
-	src/effect/colcurve.c			\
-	src/effect/convmatr.c			\
-	src/effect/effect.c			\
-	src/effect/invrtcol.c			\
-	src/effect/median.c			\
-	src/effect/replcol.c			\
-	src/file/ase.c				\
-	src/file/bmp.c				\
-	src/file/file.c				\
-	src/file/fli.c				\
-	src/file/ico.c				\
-	src/file/jpeg.c				\
-	src/file/pcx.c				\
-	src/file/png_file.c			\
-	src/file/tga.c				\
-	src/file/gif.c				\
-	src/file/gif/format.c			\
-	src/file/gif/lzw.c			\
-	src/intl/intl.c				\
-	src/intl/msgids.c			\
-	src/main.c				\
-	src/modules/color.c			\
-	src/modules/editors.c			\
-	src/modules/gfx.c			\
-	src/modules/gui.c			\
-	src/modules/palette.c			\
-	src/modules/recent.c			\
-	src/modules/render.c			\
-	src/modules/rootmenu.c			\
-	src/modules/sprites.c			\
-	src/modules/tools.c			\
-	src/modules/tools2.c			\
-	src/raster/algo.c			\
-	src/raster/algofill.c			\
-	src/raster/blend.c			\
-	src/raster/brush.c			\
-	src/raster/dirty.c			\
-	src/raster/frame.c			\
-	src/raster/gfxobj.c			\
-	src/raster/image.c			\
-	src/raster/layer.c			\
-	src/raster/mask.c			\
-	src/raster/path.c			\
-	src/raster/quant.c			\
-	src/raster/rotate.c			\
-	src/raster/sprite.c			\
-	src/raster/stock.c			\
-	src/raster/undo.c			\
-	src/script/bindings.c			\
-	src/script/script.c			\
-	src/util/autocrop.c			\
-	src/util/boundary.c			\
-	src/util/clipbrd.c			\
-	src/util/col_file.c			\
-	src/util/crop.c				\
-	src/util/filetoks.c			\
-	src/util/flip.c				\
-	src/util/frmove.c			\
-	src/util/hash.c				\
-	src/util/mapgen.c			\
-	src/util/misc.c				\
-	src/util/msk_file.c			\
-	src/util/pic_file.c			\
-	src/util/quantize.c			\
-	src/util/recscr.c			\
-	src/util/setgfx.c			\
-	src/util/thmbnail.c			\
-	src/widgets/colbar.c			\
-	src/widgets/colbut.c			\
-	src/widgets/colview.c			\
-	src/widgets/curvedit.c			\
-	src/widgets/editor/click.c		\
-	src/widgets/editor/cursor.c		\
-	src/widgets/editor/editor.c		\
-	src/widgets/editor/keys.c		\
-	src/widgets/groupbut.c			\
-	src/widgets/menuitem.c			\
-	src/widgets/paledit.c			\
-	src/widgets/preview.c			\
-	src/widgets/statebar.c			\
-	src/widgets/target.c			\
+ASE_SOURCES =						\
+	src/commands/cmd_about.c			\
+	src/commands/cmd_advanced_mode.c		\
+	src/commands/cmd_change_image_type.c		\
+	src/commands/cmd_clear.c			\
+	src/commands/cmd_close_file.c			\
+	src/commands/cmd_configure_screen.c		\
+	src/commands/cmd_configure_tools.c		\
+	src/commands/cmd_copy.c				\
+	src/commands/cmd_copy_frame.c			\
+	src/commands/cmd_crop.c				\
+	src/commands/cmd_cut.c				\
+	src/commands/cmd_deselect_mask.c		\
+	src/commands/cmd_draw_text.c			\
+	src/commands/cmd_drawing_tools.c		\
+	src/commands/cmd_duplicate_layer.c		\
+	src/commands/cmd_duplicate_sprite.c		\
+	src/commands/cmd_exit.c				\
+	src/commands/cmd_film_editor.c			\
+	src/commands/cmd_flatten_layers.c		\
+	src/commands/cmd_flip.c				\
+	src/commands/cmd_frame_properties.c		\
+	src/commands/cmd_invert_mask.c			\
+	src/commands/cmd_layer_properties.c		\
+	src/commands/cmd_link_frame.c			\
+	src/commands/cmd_load_mask.c			\
+	src/commands/cmd_mapgen.c			\
+	src/commands/cmd_mask_all.c			\
+	src/commands/cmd_mask_by_color.c		\
+	src/commands/cmd_merge_down_layer.c		\
+	src/commands/cmd_move_frame.c			\
+	src/commands/cmd_new_file.c			\
+	src/commands/cmd_new_frame.c			\
+	src/commands/cmd_new_layer.c			\
+	src/commands/cmd_new_layer_set.c		\
+	src/commands/cmd_open_file.c			\
+	src/commands/cmd_options.c			\
+	src/commands/cmd_palette_editor.c		\
+	src/commands/cmd_paste.c			\
+	src/commands/cmd_play_flic.c			\
+	src/commands/cmd_preview.c			\
+	src/commands/cmd_quick_copy.c			\
+	src/commands/cmd_quick_move.c			\
+	src/commands/cmd_record_screen.c		\
+	src/commands/cmd_redo.c				\
+	src/commands/cmd_refresh.c			\
+	src/commands/cmd_remove_frame.c			\
+	src/commands/cmd_remove_layer.c			\
+	src/commands/cmd_reselect_mask.c		\
+	src/commands/cmd_run_script.c			\
+	src/commands/cmd_save_file.c			\
+	src/commands/cmd_save_file_as.c			\
+	src/commands/cmd_save_mask.c			\
+	src/commands/cmd_screen_shot.c			\
+	src/commands/cmd_select_file.c			\
+	src/commands/cmd_sprite_editor.c		\
+	src/commands/cmd_sprite_properties.c		\
+	src/commands/cmd_tips.c				\
+	src/commands/cmd_undo.c				\
+	src/commands/commands.c				\
+	src/commands/fx/cmd_color_curve.c		\
+	src/commands/fx/cmd_convolution_matrix.c	\
+	src/commands/fx/cmd_despeckle.c			\
+	src/commands/fx/cmd_invert_color.c		\
+	src/commands/fx/cmd_replace_color.c		\
+	src/console/console.c				\
+	src/core/app.c					\
+	src/core/config.c				\
+	src/core/cfg.c					\
+	src/core/core.c					\
+	src/core/dirs.c					\
+	src/core/modules.c				\
+	src/dialogs/canvasze.c				\
+	src/dialogs/colsel.c				\
+	src/dialogs/dmapgen.c				\
+	src/dialogs/dpaledit.c				\
+	src/dialogs/drawtext.c				\
+	src/dialogs/filesel.c				\
+	src/dialogs/filmedit.c				\
+	src/dialogs/gfxsel.c				\
+	src/dialogs/maskcol.c				\
+	src/dialogs/minipal.c				\
+	src/dialogs/options.c				\
+	src/dialogs/playfli.c				\
+	src/dialogs/quick.c				\
+	src/dialogs/repo.c				\
+	src/dialogs/scrsaver.c				\
+	src/dialogs/tips.c				\
+	src/dialogs/vectmap.c				\
+	src/effect/colcurve.c				\
+	src/effect/convmatr.c				\
+	src/effect/effect.c				\
+	src/effect/invrtcol.c				\
+	src/effect/median.c				\
+	src/effect/replcol.c				\
+	src/file/ase.c					\
+	src/file/bmp.c					\
+	src/file/file.c					\
+	src/file/fli.c					\
+	src/file/ico.c					\
+	src/file/jpeg.c					\
+	src/file/pcx.c					\
+	src/file/png_file.c				\
+	src/file/tga.c					\
+	src/file/gif.c					\
+	src/file/gif/format.c				\
+	src/file/gif/lzw.c				\
+	src/intl/intl.c					\
+	src/intl/msgids.c				\
+	src/main.c					\
+	src/modules/color.c				\
+	src/modules/editors.c				\
+	src/modules/gfx.c				\
+	src/modules/gui.c				\
+	src/modules/palette.c				\
+	src/modules/recent.c				\
+	src/modules/render.c				\
+	src/modules/rootmenu.c				\
+	src/modules/sprites.c				\
+	src/modules/tools.c				\
+	src/modules/tools2.c				\
+	src/raster/algo.c				\
+	src/raster/algofill.c				\
+	src/raster/blend.c				\
+	src/raster/brush.c				\
+	src/raster/dirty.c				\
+	src/raster/frame.c				\
+	src/raster/gfxobj.c				\
+	src/raster/image.c				\
+	src/raster/layer.c				\
+	src/raster/mask.c				\
+	src/raster/path.c				\
+	src/raster/quant.c				\
+	src/raster/rotate.c				\
+	src/raster/sprite.c				\
+	src/raster/stock.c				\
+	src/raster/undo.c				\
+	src/script/bindings.c				\
+	src/script/script.c				\
+	src/util/autocrop.c				\
+	src/util/boundary.c				\
+	src/util/clipbrd.c				\
+	src/util/col_file.c				\
+	src/util/crop.c					\
+	src/util/filetoks.c				\
+	src/util/frmove.c				\
+	src/util/hash.c					\
+	src/util/mapgen.c				\
+	src/util/misc.c					\
+	src/util/msk_file.c				\
+	src/util/pic_file.c				\
+	src/util/quantize.c				\
+	src/util/recscr.c				\
+	src/util/setgfx.c				\
+	src/util/thmbnail.c				\
+	src/widgets/colbar.c				\
+	src/widgets/colbut.c				\
+	src/widgets/colview.c				\
+	src/widgets/curvedit.c				\
+	src/widgets/editor/click.c			\
+	src/widgets/editor/cursor.c			\
+	src/widgets/editor/editor.c			\
+	src/widgets/editor/keys.c			\
+	src/widgets/groupbut.c				\
+	src/widgets/menuitem.c				\
+	src/widgets/paledit.c				\
+	src/widgets/preview.c				\
+	src/widgets/statebar.c				\
+	src/widgets/target.c				\
 	src/widgets/toolbar.c
 
 ASE_OBJS = $(addprefix $(OBJ_DIR)/,					  \
