More scripts removed. Better file-selector

--- a/makefile.mgw
+++ b/makefile.mgw
@@ -15,8 +15,7 @@ endif
 # Flags for MinGW
 
 CFLAGS =
-# LFLAGS = -mwindows
-LFLAGS = -mconsole
+LFLAGS = -mwindows
 ifdef DEBUGMODE
   LFLAGS_LAST = -lalld
 else
