--- a/makefile.lst
+++ b/makefile.lst
@@ -119,7 +119,6 @@ ASE_SOURCES =						\
 	src/modules/gui.c				\
 	src/modules/palette.c				\
 	src/modules/recent.c				\
-	src/modules/render.c				\
 	src/modules/rootmenu.c				\
 	src/modules/sprites.c				\
 	src/modules/tools.c				\
@@ -128,8 +127,8 @@ ASE_SOURCES =						\
 	src/raster/algofill.c				\
 	src/raster/blend.c				\
 	src/raster/brush.c				\
+	src/raster/cel.c				\
 	src/raster/dirty.c				\
-	src/raster/frame.c				\
 	src/raster/gfxobj.c				\
 	src/raster/image.c				\
 	src/raster/layer.c				\
@@ -145,11 +144,11 @@ ASE_SOURCES =						\
 	src/script/script.c				\
 	src/util/autocrop.c				\
 	src/util/boundary.c				\
+	src/util/celmove.c				\
 	src/util/clipbrd.c				\
 	src/util/col_file.c				\
 	src/util/crop.c					\
 	src/util/filetoks.c				\
-	src/util/frmove.c				\
 	src/util/hash.c					\
 	src/util/mapgen.c				\
 	src/util/misc.c					\
@@ -157,6 +156,7 @@ ASE_SOURCES =						\
 	src/util/pic_file.c				\
 	src/util/quantize.c				\
 	src/util/recscr.c				\
+	src/util/render.c				\
 	src/util/setgfx.c				\
 	src/util/thmbnail.c				\
 	src/widgets/colbar.c				\
