Added some of the new script functions (NewSprite, LoadSprite, SaveSprite, SetSprite, NewLayer)

--- a/makefile.gcc
+++ b/makefile.gcc
@@ -28,8 +28,8 @@ ifdef DEBUGMODE
   CFLAGS += -g3
   LFLAGS += -g3
 else
-  CFLAGS += -s -O3
-  LFLAGS += -s -O3
+  CFLAGS += -s -O3 -DNDEBUG
+  LFLAGS += -s -O3 -DNDEBUG
 endif
 endif
 
