Added JMutex, lock_current_sprite, and locked & mutex fields for Sprite. Added readable/writable buttons in the Film Editor. Added forbidden cursor. Fixed some bugs in editors_draw_sprite_tiled and cmd_configure_tools.

--- a/makefile.lst
+++ b/makefile.lst
@@ -137,6 +137,7 @@ COMMON_SOURCES =					\
 	src/jinete/jmem.c				\
 	src/jinete/jmenu.c				\
 	src/jinete/jmessage.c				\
+	src/jinete/jmutex.c				\
 	src/jinete/jpanel.c				\
 	src/jinete/jquickmenu.c				\
 	src/jinete/jrect.c				\
