--- a/makefile.mgw
+++ b/makefile.mgw
@@ -1,4 +1,4 @@
-# Copyright (C) 2001-2005, 2007 by David A. Capello		-*-Makefile-*-
+# Copyright (C) 2001-2005, 2007, 2008 by David A. Capello		-*-Makefile-*-
 
 ifndef CONFIGURED
 include makefile.cfg
@@ -14,8 +14,9 @@ endif
 ######################################################################
 # Flags for MinGW
 
+# CFLAGS = -D_WIN32_WINNT=0x0500
 CFLAGS =
-LFLAGS = -mwindows
+LFLAGS = -mwindows -lshlwapi
 ifdef DEBUGMODE
   LFLAGS_LAST = -lalld
 else
