Added thumbnails, tooltips, and now the file routines don't use PACKFILE (just FILE from stdio).

--- a/makefile.cfg
+++ b/makefile.cfg
@@ -1,4 +1,4 @@
-# Copyright (C) 2001-2005, 2007 by David A. Capello		-*-Makefile-*-
+# Copyright (C) 2001-2008 by David A. Capello		-*-Makefile-*-
 # Manual configuration
 # (in Unix like systems you can use ./fix.sh script)
 
@@ -12,6 +12,7 @@
 
 #DEBUGMODE = 1
 #PROFILE = 1
+#MEMLEAK = 1
 
 ######################################################################
 # Default Unix directory to look for ASE data (to this path will be
