--- a/makefile.mgw
+++ b/makefile.mgw
@@ -22,6 +22,11 @@ ifdef DEBUGMODE
 else
   LFLAGS_LAST = -lalleg
 endif
+
+ifdef MEMLEAK
+  LFLAGS += -lpsapi
+endif
+
 WITHICON = 1
 
 ######################################################################
