--- a/makefile.gcc
+++ b/makefile.gcc
@@ -1,4 +1,4 @@
-# Copyright (C) 2001-2005, 2007, 2008 by David A. Capello		-*-Makefile-*-
+# Copyright (C) 2001-2008 by David A. Capello		-*-Makefile-*-
 
 .PHONY = _default
 _default: default
@@ -21,8 +21,8 @@ ifdef PROFILE
   LFLAGS += -pg
 else
 ifdef DEBUGMODE
-  CFLAGS += -g3 -O3 -DDEBUGMODE
-  LFLAGS += -g3 -O3
+  CFLAGS += -g3 -DDEBUGMODE
+  LFLAGS += -g3
 else
   CFLAGS += -s -O3 -DNDEBUG
   LFLAGS += -s -O3 -DNDEBUG
